css element correction that should be vertically aligned

--- a/Frontend/src/app/seller-display/seller-display.component.scss
+++ b/Frontend/src/app/seller-display/seller-display.component.scss
@@ -23,38 +23,35 @@ h1{
   display: block;
 }
 
-.positionblocklysellers a span {
-  position: absolute;
-  display: block;
-}
+
 
 .positionblocklysellers a span:nth-child(1) {
   top: 0;
-  left: 46.5%;
-  width: 13.7%;
+  left: 43%;
+  width: 14%;
   height: 4px;
   background: linear-gradient(90deg, #541c8c, #541c8c);
 }
 
 .positionblocklysellers a span:nth-child(2) {
-  left: 60%;
+  left: 57%;
   width: 4px;
-  height: 550%;
+  height: 100%;
   background: linear-gradient(180deg, #541c8c, #541c8c);
 }
 
 .positionblocklysellers a span:nth-child(3) {
-  top: 550%;
-  right: 39.75%;
-  width: 13.7%;
-  height: 4px;
+  top: 98%;
+  width: 14.2%;
+  height: 2%;
+  left: 43%;
   background: linear-gradient(270deg, #541c8c, #541c8c);
 }
 
 .positionblocklysellers a span:nth-child(4) {
-  left: 46.5%;
+  left: 43%;
   width: 4px;
-  height: 565%;
+  height: 100%;
   background: linear-gradient(360deg, #541c8c, #541c8c);
 }
 
